# stimm

./: .coverage  .dockerignore  .env.example  .env.prod.example  .gitignore  =0.6.0  AGENTS.md  AGENT_MANAGEMENT_DATABASE_SCHEMA.md  AGENT_MANAGEMENT_IMPLEMENTATION_PLAN.md  AGENT_MANAGEMENT_PHASE_PLANS.md  CLI_USAGE_GUIDE.md  CODE_OF_CONDUCT.md  INTEGRATION_PLAN.md  LIVEKIT_INTEGRATION_GUIDE.md  README.md  agent_bridge_implementation_plan.md  alembic.ini  audio-setup.sh  centralized_streaming_documentation.md  debug_voicebot_logs.py  design_rag_administrable.md  dispatch.json  docker-compose.livekit.yml  docker-compose.prod.yml  docker-compose.yml  kokoro_live_streaming_implementation_plan.md  kokoro_live_streaming_usage.md  livekit.prod.yaml  livekit.toml  livekit.yaml  mkdocs.yml  pyproject.toml  sip.prod.yaml  test_integration.py  test_kokoro_integration.py  test_kokoro_resampling.py  test_kokoro_speed.py  test_shared_streaming.py  trunk.json
src/: environment_config.py  main.py  pyproject.toml  requirements.txt
src/cli/: __init__.py  agent_runner.py  agent_worker.py  echo_client.py  echo_client_livekit_agent.py  echo_client_pyaudio.py  echo_server.py  echo_server_optimized.py  echo_test_complete.py  livekit_client.py  main.py  simple_echo_agent.py  test_livekit_microphone.py  test_mic.py  test_vad_echo.py  text_input.py
src/database/: __init__.py  models.py  session.py
src/front/: .env.example  .env.prod  next.config.mjs  next.config.ts  package-lock.json  package.json
src/kokoro.local/: __init__.py  main.py  requirements.txt  websocket_server.py
src/scripts/: clear_and_ingest.py  (+4 more)
(+274 files in other folders)
