[project]
name = "voicebot-cli"
version = "1.0.0"
description = "CLI tool for testing voice agents locally"
authors = [
    {name = "VoiceBot Team", email = "team@voicebot.com"},
]
dependencies = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "livekit-api>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyaudio>=0.2.11",
]
requires-python = ">=3.9"

[project.scripts]
voicebot-cli = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

audio = [
    "sounddevice>=0.4.6",
    "pyaudio>=0.2.11",
    "numpy>=1.24.0",
]

livekit = [
    "livekit-api>=0.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3