[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This file is a bridge for legacy requirements.txt
# All dependencies are now defined in the root pyproject.toml
# This allows uv to resolve dependencies for local development

[tool.uv]
# Dependency sources - point to the root pyproject.toml
# This allows uv to use the consolidated dependencies
dev-dependencies = []

[tool.uv.sources]
# Legacy configuration - keep for backward compatibility
# New dependencies should be added to root pyproject.toml